// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a form with empty field values 1`] = `
<div>
  <main>
    <form>
      <label
        for="title"
      >
        Title:
      </label>
      <input
        id="title"
        name="title"
        type="text"
        value=""
      />
      <label
        for="client_id"
      >
        Client: 
      </label>
      <select
        id="client_id"
        name="client_id"
      >
        <option
          value=""
        >
          required
        </option>
        <option
          value="1"
        >
          person1
        </option>
        <option
          value="2"
        >
          person2
        </option>
      </select>
      <label
        for="description"
      >
        Description:
      </label>
      <textarea
        id="description"
        name="description"
      />
      <label
        for="price_quoted"
      >
        Price Quoted:
      </label>
      <input
        id="price_quoted"
        name="price_quoted"
        type="text"
        value=""
      />
      <label
        for="hours_quoted"
      >
        Hours Quoted:
      </label>
      <input
        id="hours_quoted"
        name="hours_quoted"
        type="text"
        value=""
      />
      <label
        for="hourly_rate"
      >
        Hourly Rate:
      </label>
      <input
        id="hourly_rate"
        name="hourly_rate"
        type="text"
        value=""
      />
      <label
        for="hours_worked"
      >
        Hours Worked:
      </label>
      <input
        id="hours_worked"
        name="hours_worked"
        type="text"
        value=""
      />
      <label
        for="date_start"
      >
        Start Date:
      </label>
      <input
        id="date_start"
        name="date_start"
        type="date"
        value=""
      />
      <label
        for="date_end"
      >
        End Date:
      </label>
      <input
        id="date_end"
        name="date_end"
        type="date"
        value=""
      />
      <label
        for="completed_at"
      >
        Completed At:
      </label>
      <input
        id="completed_at"
        name="completed_at"
        type="date"
        value=""
      />
      <label
        for="URL"
      >
        URL:
      </label>
      <input
        id="URL"
        name="URL"
        type="text"
        value=""
      />
      <label
        for="notes"
      >
        Notes:
      </label>
      <textarea
        id="notes"
        name="notes"
      />
    </form>
    <div
      class="buttonWrapper"
    >
      <button>
        Save
      </button>
      <button>
        Delete
      </button>
    </div>
  </main>
</div>
`;

exports[`should display a form with provided values 1`] = `
<div>
  <main>
    <form>
      <label
        for="title"
      >
        Title:
      </label>
      <input
        id="title"
        name="title"
        type="text"
        value="testing"
      />
      <label
        for="client_id"
      >
        Client: 
      </label>
      <select
        id="client_id"
        name="client_id"
      >
        <option
          value=""
        >
          required
        </option>
        <option
          value="1"
        >
          person1
        </option>
        <option
          value="2"
        >
          person2
        </option>
      </select>
      <label
        for="description"
      >
        Description:
      </label>
      <textarea
        id="description"
        name="description"
      >
        testing
      </textarea>
      <label
        for="price_quoted"
      >
        Price Quoted:
      </label>
      <input
        id="price_quoted"
        name="price_quoted"
        type="text"
        value="4000"
      />
      <label
        for="hours_quoted"
      >
        Hours Quoted:
      </label>
      <input
        id="hours_quoted"
        name="hours_quoted"
        type="text"
        value="100"
      />
      <label
        for="hourly_rate"
      >
        Hourly Rate:
      </label>
      <input
        id="hourly_rate"
        name="hourly_rate"
        type="text"
        value="30"
      />
      <label
        for="hours_worked"
      >
        Hours Worked:
      </label>
      <input
        id="hours_worked"
        name="hours_worked"
        type="text"
        value="50"
      />
      <label
        for="date_start"
      >
        Start Date:
      </label>
      <input
        id="date_start"
        name="date_start"
        type="date"
        value="2022-01-20"
      />
      <label
        for="date_end"
      >
        End Date:
      </label>
      <input
        id="date_end"
        name="date_end"
        type="date"
        value="2022-01-21"
      />
      <label
        for="completed_at"
      >
        Completed At:
      </label>
      <input
        id="completed_at"
        name="completed_at"
        type="date"
        value="2022-01-21"
      />
      <label
        for="URL"
      >
        URL:
      </label>
      <input
        id="URL"
        name="URL"
        type="text"
        value="some@url.com"
      />
      <label
        for="notes"
      >
        Notes:
      </label>
      <textarea
        id="notes"
        name="notes"
      >
        testing
      </textarea>
    </form>
    <div
      class="buttonWrapper"
    >
      <button>
        Save
      </button>
      <button>
        Delete
      </button>
    </div>
  </main>
</div>
`;
